[gd_scene load_steps=5 format=3]

[ext_resource type="Script" path="res://multiplayer/lobby_room.gd" id="1"]

[sub_resource type="BoxMesh" id="ground_mesh"]
size = Vector3(16, 0.1, 10)

[sub_resource type="StandardMaterial3D" id="ground_mat"]
albedo_color = Color(0.12, 0.14, 0.18, 1)

[sub_resource type="Environment" id="env"]
background_mode = 1
background_color = Color(0.06, 0.07, 0.12, 1)
ambient_light_color = Color(0.35, 0.35, 0.45, 1)
ambient_light_energy = 0.7

[node name="LobbyRoom" type="Node3D"]
script = ExtResource("1")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.921, 0.389, 0, -0.389, 0.921, 0, 4, 6)
fov = 55.0

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("env")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866, -0.25, 0.433, 0, 0.866, 0.5, -0.5, -0.433, 0.75, 0, 6, 2)
light_energy = 1.3
shadow_enabled = true

[node name="Ground" type="MeshInstance3D" parent="."]
mesh = SubResource("ground_mesh")
surface_material_override/0 = SubResource("ground_mat")

[node name="PlayerContainer" type="Node3D" parent="."]

[node name="UILayer" type="CanvasLayer" parent="."]
layer = 5

[node name="TopBar" type="HBoxContainer" parent="UILayer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 40.0
theme_override_constants/separation = 20

[node name="CountLabel" type="Label" parent="UILayer/TopBar"]
layout_mode = 2
text = "Players: 0 / 8"
theme_override_font_sizes/font_size = 20

[node name="IPLabel" type="Label" parent="UILayer/TopBar"]
layout_mode = 2
text = "IP: ..."
theme_override_font_sizes/font_size = 20
theme_override_colors/font_color = Color(0.7, 0.85, 1, 0.9)

[node name="BottomBar" type="HBoxContainer" parent="UILayer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -55.0
alignment = 1
theme_override_constants/separation = 20

[node name="BackBtn" type="Button" parent="UILayer/BottomBar"]
layout_mode = 2
custom_minimum_size = Vector2(140, 44)
text = "Back"
theme_override_font_sizes/font_size = 18

[node name="RoundsLabel" type="Label" parent="UILayer/BottomBar"]
layout_mode = 2
text = "Rounds:"
theme_override_font_sizes/font_size = 18

[node name="RoundsSpinBox" type="SpinBox" parent="UILayer/BottomBar"]
layout_mode = 2
custom_minimum_size = Vector2(80, 44)
min_value = 1.0
max_value = 10.0
value = 3.0

[node name="StartBtn" type="Button" parent="UILayer/BottomBar"]
layout_mode = 2
custom_minimum_size = Vector2(180, 44)
text = "Start Game"
theme_override_font_sizes/font_size = 18
